Revision history for {{$dist->name}}

{{$NEXT}}

0.15      2013-10-10 13:20:00 -0400
  - actually require moo 1.001000, and use scalar default value
    that feature should have been there to begin with.

0.14      2013-10-10 13:09:42 -0400
  - fix older Moo compat

0.12      2013-10-10 07:07:42 -0400
  - deprecate on_next_message, on_each_message and on_finish
    (use $connection->on($event => sub { }) instead
    see documentation for different calling convention.
  - added AnyEvent::WebSocket::Message class
  - You can now use Connection#send method to send Message
    objects in addition to strings.

0.11      2013-10-03 17:10:38 -0400
  - fix mojo_ test plans for when mojo is not installed

0.10      2013-10-03 16:55:28 -0400
  - added a close method for the AnyEvent::WebSocket::Connection class
  - better test coverage

0.09      2013-10-03 09:42:47 -0400
  - Fix for messages that Perl considers "false" (thanks Toshio Ito gh#4)

0.08      2013-09-22 03:47:32 -0400
  - require mojolicious 3.x or better for optional mojo tests
    (not required for test or install)

0.07      2013-09-20 10:13:32 -0400
  - documentation

0.06      2013-09-07 04:29:10 -0400
  - require PerlX::Maybe 0.003 for "provided" method

0.05      2013-09-05 15:34:56 -0400
  - propagate connect error properly

0.04      2013-08-30 09:52:42 -0400
  - kill some memory cycles

0.03      2013-08-30 08:53:30 -0400
  - added SSL/TLS support

0.02      2013-08-29 15:38:34 -0400
  - added AnyEvent only test for when Mojo isn't installed

0.01      2013-08-29 14:49:38 -0400
  - initial version